# monorepo

./: .dockerignore  .gitignore  Cargo.toml  README.md  biome.json  bun.lockb  flake.nix  package.json  test.txt  tsconfig.json  tsconfig.options.json
.github/config/: pr-labeler.yml
.github/scripts/: get-version.sh
.github/workflows/: pr-labeler.yml  publish-calendarbot.yml  tests.yml
.moon/: tasks.yml  toolchain.yml  workspace.yml
.moon/tasks/: rust.yml
apps/awaken-api/: moon.yml  package.json  tsconfig.json
crates/calendarbot/: .gitignore  Cargo.toml  Dockerfile  docker-compose.dev.yaml  moon.yml
crates/calendarbot/migrations/2024-02-21-161811_init/: down.sql  up.sql
crates/calendarbot/migrations/2024-10-03-133025_add_relations/: down.sql  up.sql
crates/calendarbot/migrations/2024-10-03-160323_add_message_id/: down.sql  up.sql
crates/calendarbot/migrations/2024-10-04-095832_add_force_field/: down.sql  up.sql
crates/calendarbot/migrations/2024-11-17-153941_calendar_options/: down.sql  up.sql
crates/calendarbot/src/: calendar.rs  discord.rs  events.rs  main.rs  models.rs  schema.rs  types.rs
crates/calendarbot/src/discord/: calendar_event.rs  calendar_events.rs  init.rs  local_cache.rs  mod.rs
crates/calendarbot/src/discord/commands/: calendar.rs  mod.rs
crates/calendarbot/src/discord/commands/calendar/: delete.rs  mod.rs  new.rs  set.rs
crates/calendarbot/src/gcalendar/: mod.rs  update_calendar_event.rs  verify_calendar_id.rs  worker_thread.rs
crates/calendarbot/src/types/: calendar.rs  data.rs  mod.rs  timezones.rs
(+5 files in other folders)
