[package]
name = "calendarbot"
authors = ["Yohan Zbinden <yohan@yohanzbinden.ch>"]
license = "GPL-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex= "1.11.0"
poise = "0.6.1"
log = "0.4.20"
envy = "0.4.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "^1.0"
anyhow = "1.0.79"
sqlx = "0.8.2"
chrono-tz = "0.10.0"
diesel = "2.2.3"
diesel-async = { version = "0.5.0", features = ["postgres", "deadpool"]}
dotenvy = "0.15.7"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
env_logger = "0.11.2"
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
google-calendar3 = "5.0.4"
